ingress/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  selector:
     app: mydep
  ports:
  - port: 80
